--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "oauthlib>=3.3.1",
     "pandas>=2.3.2",
     "requests>=2.32.5",
+    "requests-oauthlib>=2.0.0",
 ]
